--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "zod": "^3.22.4",
-    "ethers": "^6.9.2"
+    "ethers": "^6.9.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
